Summary of important user-visible changes for instrument-control 0.8.0
-------------------------------------------------------------------

  ** MODBUS: Added new modbus class

  ** TCPSERVER: Added new tcpserver class

  ** minor bug fixes in configure

  ** added QT help doc generation

  ** updates to package documentation

  ** added common functions:
     writeline
     readline
     readbinblock
     writebinblock
     writeread

  ** TCPCLIENT: bugfix read when used with no size parameter

  ** UDPPORT: bugfix read when used with no size parameter

  ** Min octave version is now 4.0  

Summary of important user-visible changes for instrument-control 0.7.1
-------------------------------------------------------------------

  ** General updates to support Octave 7+

  ** Updated common functions
     fread - set correct size of uint16
     fprintf - fix else for multiple args

Summary of important user-visible changes for instrument-control 0.7.0
-------------------------------------------------------------------

  ** Update get function for instrument controls to not use cellfun (Bug #59581)

  ** UDPPORT: Added new udpport class

  ** TCPCLIENT:  Added new tcpclient class

  ** SERIALPORT: update property access to proper case usage

Summary of important user-visible changes for instrument-control 0.6.0
-------------------------------------------------------------------

  ** SPI: added new spi object and functions

  ** TCP: 
    added tcpclient, deprecated tcpip

    added methods flush, read, write

  ** UDP: 
    added methods flush, read, write

Summary of important user-visible changes for instrument-control 0.5.0
-------------------------------------------------------------------

  ** General updates to support Octave 6+

  ** Added common functions
     flushinput
     flushoutput
     instrhelp
 
  ** SERIALPORT: added new serialport object and functions

  ** SERIAL: use extended win32 serial name for comports so > 10 work.
