@@ -163,7 +163,7 @@ octave_modbus::subsref (const std::string& type, const std::list<octave_value_li
 	  {
             octave_value_list ovl;
             // inc ref count as assign this to octave_value
-            count++; 
+            OV_COUNT++; 
             ovl (0) = octave_value (this);
             ovl (1) = (idx.front ()) (0);
             retval = OCTAVE__FEVAL (std::string ("__modbus_properties__"), ovl, 1);
@@ -201,12 +201,12 @@ octave_modbus::subsasgn (const std::string& type, const std::list<octave_value_l
             {
               octave_value_list ovl;
               // inc ref count as assign this to octave_value
-              count++; 
+              OV_COUNT++; 
               ovl (0) = octave_value (this);
               ovl (1) = (idx.front ()) (0);
               ovl (2) = rhs;
               OCTAVE__FEVAL (std::string ("__modbus_properties__"), ovl, 1);
-              count++;
+              OV_COUNT++;
               retval = octave_value (this);
             }
         }
@@ -219,7 +219,7 @@ octave_modbus::subsasgn (const std::string& type, const std::list<octave_value_l
               std::list<octave_value_list> next_idx (idx);
               next_idx.erase (next_idx.begin ());
               u (0).subsasgn(type.substr (1), next_idx, rhs);
-              count++;
+              OV_COUNT++;
               retval = octave_value (this);
             } 
         }
