@@ -55,7 +55,7 @@ octave_serial_common::subsref (const std::string& type, const std::list<octave_v
       {
         octave_value_list ovl;
         // inc ref count as assign this to octave_value
-        count++; 
+        OV_COUNT++; 
         ovl (0) = octave_value (this);
         ovl (1) = (idx.front ()) (0);
         retval = OCTAVE__FEVAL (std::string ("__srl_properties__"), ovl, 1);
@@ -84,12 +84,12 @@ octave_serial_common::subsasgn (const std::string& type, const std::list<octave_
         {
           octave_value_list ovl;
           // inc ref count as assign this to octave_value
-          count++; 
+          OV_COUNT++; 
           ovl (0) = octave_value (this);
           ovl (1) = (idx.front ()) (0);
           ovl (2) = rhs;
           OCTAVE__FEVAL (std::string ("__srl_properties__"), ovl, 0);
-          count++;
+          OV_COUNT++;
           retval = octave_value (this);
         }
       else if (type.length () > 1 && type[1] == '.')
@@ -102,7 +102,7 @@ octave_serial_common::subsasgn (const std::string& type, const std::list<octave_
               next_idx.erase (next_idx.begin ());
               u (0).subsasgn(type.substr (1), next_idx, rhs);
             } 
-          count++;
+          OV_COUNT++;
           retval = octave_value (this);
         }
       else
