@@ -81,7 +81,7 @@ octave_serialport_common::subsref (const std::string& type, const std::list<octa
 	  {
             octave_value_list ovl;
             // inc ref count as assign this to octave_value
-            count++; 
+            OV_COUNT++; 
             ovl (0) = octave_value (this);
             ovl (1) = (idx.front ()) (0);
             retval = OCTAVE__FEVAL (std::string ("__srlp_properties__"), ovl, 1);
@@ -120,12 +120,12 @@ octave_serialport_common::subsasgn (const std::string& type, const std::list<oct
    
               octave_value_list ovl;
               // inc ref count as assign this to octave_value
-              count++; 
+              OV_COUNT++; 
               ovl (0) = octave_value (this);
               ovl (1) = (idx.front ()) (0);
               ovl (2) = rhs;
               OCTAVE__FEVAL (std::string ("__srlp_properties__"), ovl, 0);
-              count++;
+              OV_COUNT++;
               retval = octave_value (this);
 	    }
         }
@@ -139,7 +139,7 @@ octave_serialport_common::subsasgn (const std::string& type, const std::list<oct
               next_idx.erase (next_idx.begin ());
               u (0).subsasgn(type.substr (1), next_idx, rhs);
             } 
-          count++;
+          OV_COUNT++;
           retval = octave_value (this);
         }
       else
