@@ -87,7 +87,7 @@ public:
   // 4.4+
   bool isobject (void) const { return true;}
 
-  octave_base_value * unique_clone (void) { count++; return this;}
+  octave_base_value * unique_clone (void) { OV_COUNT++; return this;}
 
   // required to use subsasn
   string_vector map_keys (void) const { return fieldnames; }
