@@ -184,7 +184,7 @@ octave_udpport::subsref (const std::string& type, const std::list<octave_value_l
 	  {
             octave_value_list ovl;
             // inc ref count as assign this to octave_value
-            count++; 
+            OV_COUNT++; 
             ovl (0) = octave_value (this);
             ovl (1) = (idx.front ()) (0);
             retval = OCTAVE__FEVAL (std::string ("__udpport_properties__"), ovl, 1);
@@ -221,12 +221,12 @@ octave_udpport::subsasgn (const std::string& type, const std::list<octave_value_
 
           octave_value_list ovl;
           // inc ref count as assign this to octave_value
-          count++; 
+          OV_COUNT++; 
           ovl (0) = octave_value (this);
           ovl (1) = (idx.front ()) (0);
           ovl (2) = rhs;
           OCTAVE__FEVAL (std::string ("__udpport_properties__"), ovl, 0);
-          count++;
+          OV_COUNT++;
           retval = octave_value (this);
         }
       else if (type.length () > 1 && type[1] == '.')
@@ -238,7 +238,7 @@ octave_udpport::subsasgn (const std::string& type, const std::list<octave_value_
               std::list<octave_value_list> next_idx (idx);
               next_idx.erase (next_idx.begin ());
               u (0).subsasgn(type.substr (1), next_idx, rhs);
-              count++;
+              OV_COUNT++;
               retval = octave_value (this);
             } 
         }
