@@ -1,3 +1,9 @@
+Summary of important user-visible changes for instrument-control 0.8.0+
+-------------------------------------------------------------------
+
+  ** General updates to support Octave 8+
+
+
 Summary of important user-visible changes for instrument-control 0.8.0
 -------------------------------------------------------------------
 
